<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerview_reunion_fragment"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:context=".ui.reunion_list.ReunionFragment"
    tools:listitem="@layout/fragment_reunion_item" />