...
    android:layout_height="match_parent"
    tools:context=".ui.reunion_list.AddReunionActivity"
    android:orientation="vertical">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/container_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="16dp"
        android:background="@drawable/border"/>

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:layout_margin="@dimen/margin_save_button"
            android:layout_gravity="center"
            android:text="save" />
...
