<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddReunionFragmentPage1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choix de la salle" />

        <Spinner
            android:id="@+id/spinner_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_topic_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Subject" />

        </com.google.android.material.textfield.TextInputLayout>


        <include
            layout="@layout/include_add_reunion_fragment"
            />

    </LinearLayout>

</ScrollView>